# openMVGLite

./: CMakeLists.txt  README.md
dataoutput/: sfm_data.json
dataoutput/matches/: 100_7100.desc  100_7100.feat  100_7101.desc  100_7101.feat  100_7102.desc  100_7102.feat  100_7103.desc  100_7103.feat  100_7104.desc  100_7104.feat  100_7105.desc  100_7105.feat  100_7106.desc  100_7106.feat  100_7107.desc  100_7107.feat  100_7108.desc  100_7108.feat  100_7109.desc  100_7109.feat  100_7110.desc  100_7110.feat
dataoutput/sfm_out/: Reconstruction_Report.html  SfMReconstruction_Report.html  cameraPath_translation_averaging.ply  global_relative_rotation_pose_graph  initial_structure.ply  structure_00_refine_T_Xi.ply  structure_01_refine_RT_Xi.ply  structure_02_refine_KRT_Xi.ply  structure_03_outlier_removed.ply  structure_04_outlier_removed.ply
sfm/: main_ComputeFeatures.cpp  main_ComputeMatches.cpp  main_GlobalSfM.cpp  main_SfMInit_ImageListing.cpp  main_openMVG2openMVS.cpp
